get trainer trainings refactoring with optional and trainingInfoDto